bugfix: modal overflow-y; hasReview in single product

--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -35,6 +35,10 @@
 		display: flex;
 		flex-direction: column;
 		transition: max-width 0.3s ease-in-out;
+
+		.body {
+			overflow-y: auto;
+		}
 	}
 
 	.close {
